--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -1,5 +1,5 @@
 %h1 This is the Workouts#Index placeholder
 
 - @workouts.each do |workout|
-	%h2= link_to workout.date, workout
+	%h2= link_to workout.date.strftime("%A %B %d"), workout
 	%h3= workout.workout
